Mario: addTask -> fixed gap between container

--- a/assets/css/addTask.css
+++ b/assets/css/addTask.css
@@ -404,7 +404,7 @@ select {
 .addTaskContainer {
     display: flex;
     flex-direction: column;
-    gap: var(--addTaskGap-24);
+    gap: var(--addTaskGap-8);
 }
 
 
